[package]
name = "duck_game_analyzer"
version = "0.1.0"
authors = ["OmegaJak <jak.kruger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
plotters = "^0.3.0"
lodepng = "3.2.2"
rgb = "0.8.25"
imgref = "1.7.0"

[dev-dependencies]
ntest = "*"